@@ -7,6 +7,7 @@ Date: ????
     - Only evaluate a message if the text is nil or number
     - See what would happen if you tried to edit it while the gui is open
     - Draft up code to support being conditionally selected by players
+    - Change how i deal with selected structs
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 13
